--- a/_posts/2019-07-07-html相关 面试问题.md
+++ b/_posts/2019-07-07-html相关 面试问题.md
@@ -15,7 +15,7 @@ typora-root-url: ..
 
 # html相关 面试问题
 
-### 1. h5新标签有哪些？为什么要加强语义化？
+#### 1. h5新标签有哪些？为什么要加强语义化？
 
 新标签：
 
@@ -125,3 +125,9 @@ typora-root-url: ..
 - 行内元素内嵌块级元素。高度被子元素撑大，而**宽度和父级一致**（父级是body就是body的宽度）。
 
 - **行内块元素**内嵌块级元素。宽高都会**被子元素撑大**的。
+
+
+
+#### 3.html中首行<!doctype>的作用？
+
+​	**文档类型声明**，目的是告诉标准通用标记语言解析器要使用什么样的文档类型定义（DTD）来解析文档；声明必须是HTML文档的第一行，位于html标签之前；
