--- a/_posts/2019-07-07-js相关 面试问题.md
+++ b/_posts/2019-07-07-js相关 面试问题.md
@@ -15,3 +15,576 @@ typora-root-url: ..
 
 # js相关 面试问题
 
+#### 1. setTimeout输出值的时候，如何实现i按序输出？
+
+```javascript
+for(var i=0;i<10;i++){
+    setTimeout(function ten(){
+            console.log(i);
+        },10);
+}//输出结果是10个10
+```
+
+问：为什么输出的是10个10？
+
+答：JS是一个单线程的解释器，setTimeout本质是间隔一定时间将任务添加到任务队列中。输出的时候for循环作为主线程已经执行完毕，此时作用域中的`i=5`；按序执行10次输出`i`，就会输出10个10；
+
+问：如何输出成按序输出？
+
+答：方法一：
+
+生成一个**立即执行的函数**，将`i`作为参数输入（闭包）
+
+```javascript
+for(var i=0;i<10;i++){
+    (function(i){
+    	setTimeout(function ten(){
+            console.log(i);
+        },10);
+    })(i)
+}
+```
+
+方法二：用es6中的let来声明变量，相当于**let在每个块级作用域里面都声明了一个变量`i`**
+
+```javascript
+for(let i=0;i<10;i++){
+    setTimeout(function ten(){
+            console.log(i);
+        },10);
+}
+```
+
+方法三：使用`setTimeout`的**第三个参数**
+
+```javascript
+for(var i=0;i<10;i++){
+    setTimeout(function ten(){
+            console.log(i);
+        },10,i);
+}
+```
+
+
+
+#### 2. 继承prototype大概是怎么实现的？
+
+实例对象per的构造器constructor是指构造函数Person；
+
+```javascript
+console.log(per.constructor==Person);//true
+```
+
+实例对象的`_proto_`和构造函数中的**prototype**相等；
+
+```javascript
+console.log(per._proto_.constructor==Person.prototype.constructor);//true
+```
+
+
+
+**原型链**：实例对象使用的属性或者方法，先在实例中查找，找到了则直接使用，找不到则去实例对象的`__proto__`指向的原型对象prototype中找，找到了则使用,找不到则报错。
+
+
+
+**实例对象**中有**`_proto_`**这个属性，叫原型，也是一个对象，这个属性是给**浏览器**使用，
+
+不是标准的属性----->**__proto__**----->**可以叫**原型对象；
+
+**构造函数**中有**prototype**这个属性，叫原型，也是一个对象，这个属性是给**程序员**使用，
+
+是标准的属性------>**prototype**--->**可以叫**原型对象；
+
+
+
+1. **原型继承**核心就是让自定义的构造器的prototype对象**指向**父类构造器生成的对象：
+
+```javascript
+//Person是个构造函数，Per是自定义的构造器
+function Per(){}
+Per.prototype = new Person('Alice');
+const person = new Per()//继承父类实例定义的所有属性以及父类构造器原型上的属性
+```
+
+2. **借用函数继承**：通过函数对象本身的 `call` 和 `apply` 来显示的指定函数调用时必备的参数；
+
+```javascript
+function Per(name){
+    Person.call(this,name)//当成了普通函数来使用
+}
+const person = new Per('Alice')
+//只能调用Person中定义的属性和函数，无法调用Person定义在prototype上的属性和方法
+```
+
+3. **组合继承（原型链+借用函数）**：[为了解决借用函数无法使用函数原型上的属性和方法]
+
+```javascript
+function Per(name){
+    Person.call(this,name)//当成了普通函数来使用
+}
+Per.prototype = new Person('Alice')//这样写，会造成Animal实例化两次，没有自己的原型
+//或者
+Per.prototype = Person.prototype//这样写，就不会造成多次实例化
+
+const person = new Per('Alice')
+```
+
+4. **原型式继承**：提供一个被继承的对象，把这个对象挂在到某个构造函数的**prototype**上，再利用new；
+
+```javascript
+function inherit (object) {
+  function fn () {} 		// 提供一个函数
+  fn.prototype = object ;	// 设置函数的prototype
+  return new fn() 			// 返回这个函数实例化出来的对象
+}
+const person = Person('Alice');
+const me=inherit(person);//可以继承peroson对象上所有的方法和属性
+```
+
+5. **寄生式继承**
+6. **寄生组合式继承**：利用 `Object.create()` 方法
+
+
+
+#### 3. js的垃圾回收机制？（摘自红宝书）
+
+1. 离开作用域的值将被自动标记为可以回收，因此将在垃圾收集期间被删除；
+2. **“ 标记清除 ”** 是目前最主流的垃圾收集算法，这种算法的思想是给当前不使用的值加上标记，然后再回收其内存（当变量进入环境时，将变量标记为“进入环境”。当变量离开环境时，将其标记为“离开环境”，标记“离开环境”的就回收内存）；
+3. 另一种垃圾收集算法是 **“ 引用计数 ”** ，这种算法的思想是跟踪记录所有值被引用的次数。`JavaScript`引擎目前都不再使用这种算法；但在 IE 中访问非原生`JavaScript`对象（如`DOM`元素）时，这种算法仍然可能会导致问题；
+4. 当代码中存在循环引用现象时，" 引用计数 "算法就会导致问题；
+5. 解除变量的引用不仅有助于消除循环引用现象，而且对垃圾收集也有好处。为了确保有效的回收内存，应该及时解除不再使用的全局对象、全局对象属性以及循环引用变量的引用。
+
+
+
+#### 4. 闭包是什么？用let怎么实现闭包？有什么优点和缺点？
+
+闭包是指有权访问另一个函数作用域中的变量的函数。
+
+一个闭包就是**一个没有释放资源的栈区**，栈区内的变量处于激活状态。
+
+闭包：当外部函数返回之后，内部函数可以访问外部函数的属性或者方法。（站友提供的说法）
+
+在ES6中let实际是为js新增了块级作用域。
+
+let声明的变量可以绑定在作用域中。
+
+**优点**：① 能够读取函数内部的变量；②让这些变量一直存在于内存中，不会在调用结束后被垃圾回收机制回收；
+
+**缺点**：由于闭包会使用函数中的变量存在在内存中，内存消耗很大，所以不能滥用闭包；解决的办法是**退出函数之前，将不使用的局部变量删除**；
+
+
+
+#### 5. 怎么调程序中出现的代码？
+
+```javascript
+alert('方法一')
+console.log('方法二') 
+Chrome中的开发者工具：断点设置、调试功能
+```
+
+
+
+#### 6.this的指向问题？
+
+this的最终指向的是那个调用它的对象。
+
+改变this指向的方法：
+
+1. 使用**箭头函数**；
+2. 在函数内部使用`_this=this;`
+3. 使用**apply、call、bind**
+4. new**实例化一个对象**；
+
+
+
+#### 7.js的执行机制：Event loop
+
+![](/img/assets_2019/%E6%89%A7%E8%A1%8C%E6%9C%BA%E5%88%B6.png)
+
+- 同步和异步任务**分别进入不同的执行"场所"**，同步的进入主线程，异步的进入Event Table并注册函数。
+- 当指定的事情完成时，Event Table会将这个函数移入Event Queue。
+- 主线程内的任务执行完毕为空，会去Event Queue读取对应的函数，进入主线程执行。
+- 上述过程会不断重复，也就是常说的Event Loop(事件循环)。
+
+​        `setTimeout`这个函数，是经过指定时间后，**把要执行的任务加入到Event Queue中**，又因为是单线程任务要一个一个执行，如果前面的任务需要的时间太久，那么只能等着，导致真正的延迟时间远远大于设置的时间长度。
+
+​       `setInterval`会每隔**指定的时间将注册的函数置入Event Queue**，如果前面的任务耗时太久，那么同样需要等待。唯一需要注意的一点是，对于`setInterval(fn,ms)`来说，我们已经知道不是每过`ms`秒会执行一次`fn`，而是每过`ms`秒，会有`fn`进入Event Queue。一旦**setInterval的回调函数fn执行时间超过了延迟时间ms，那么就完全看不出来有时间间隔了**。
+
+
+
+除了广义的同步任务和异步任务，我们对任务有更精细的定义：
+
+- macro-task(宏任务)：包括整体代码script，setTimeout，setInterval
+- micro-task(微任务)：Promise，process.nextTick
+
+不同类型的任务会进入对应的Event Queue，比如`setTimeout`和`setInterval`会进入相同的Event Queue。
+
+![](/img/assets_2019/%E5%AE%8F%E4%BB%BB%E5%8A%A1.png)
+
+进入整体代码(宏任务)后，开始第一次循环。接着执行所有的微任务。然后再次从宏任务开始，找到其中一个任务队列执行完毕，再执行所有的微任务。
+
+
+
+#### 8.给DOM元素绑定事件有哪几种方法？
+
+1.使用内联；2.使用`.onclick`的方式；3.使用事件监听`addEventListener`的方式；
+
+##### 1、2两种方式都是存在一个**弊端**的，就是一个元素只能添加一个事件。
+
+```html
+<!--1.内联-->
+<input type="button" value="btn" onclick="alert('内联');">
+```
+
+​	这种方式就是在一个元素上面直接绑定了一个点击`onclick`事件。同时，这个事件的优先级是最高的。
+
+```html
+<!--2. .onclick的方式-->
+<input type="button" value="btn">
+
+<script>
+	var btn = document.getElementsBytagname("input")[0];
+	btn.onclick = function(){
+		alert('.onclick')
+	}
+</script>
+```
+
+使用这种形式也是可以给一个DOM元素添加上一个事件。
+
+##### 3.给一个元素（DOM对象）添加两个甚至是多个事件
+
+```html
+<!--3.事件监听addEventListener-->
+<input type="button" value="按钮">
+
+<script>
+	var btn = document.getElementsBytagname("input")[0];
+	btn.addEventListener("click", function(){
+		alert(1)
+	})
+	btn.addEventListener("click", function(){
+		alert(2)
+	})
+</script>
+```
+
+使用`addEventListener`的方式还可以拥有第三个参数：
+
+1. 事件类型，**不需要**添加上`on`
+2. 事件函数
+3. 是否捕获（布尔值），默认是`false`，即不捕获，那就是冒泡。
+
+
+
+#### 9.三大事件冒泡、捕获是怎么执行的？
+
+**先捕获再冒泡**
+
+事件冒泡的概念下在p元素上发生click事件的顺序应该是**p -> div -> body -> html -> document**；
+
+事件捕获的概念下在p元素上发生click事件的顺序应该是**document -> html -> body -> div -> p**；
+
+
+
+#### 10.js处理异步的几种方式
+
+##### **一、回调函数（callback）**
+
+**概念**：回调是一个函数被作为一个参数传递到另一个函数里，在那个函数**执行完后再执行**。
+
+**优点**：回调函数是异步编程最基本的方法，简单、容易理解和部署
+
+**缺点**：不利于代码的阅读和维护，各个部分之间高度耦合，流程会很混乱，而且每个任务只能指定一个回调函数。
+
+**注意 区分**：回调函数和异步 **回调并不一定就是异步。他们自己并没有直接关系。**
+
+**二、事件监听**
+
+采用事件驱动模式。任务的执行不取决代码的顺序，而**取决于某一个事件是否发生**。
+
+**监听函数有：on，bind，listen，addEventListener，observe**
+
+```javascript
+//on
+f1.on('done',f2);
+//或者
+function f1(){
+    settimeout(function(){
+       //...f1的任务代码
+       f1.trigger('done');  //执行完成后，立即触发done事件，从而开始执行f2.
+    },1000);
+}
+```
+
+**优点**：容易理解，可以绑定多个事件，每一个事件**可以指定多个回调函数**，而且可以**去耦合，有利于实现模块化。**
+
+**缺点**：整个程序都要变成事件驱动型，运行流程会变得不清晰。
+
+```javascript
+element.onclick=function(){
+   //处理函数
+}
+```
+
+**优点**：写法兼容到主流浏览器
+
+**缺点**：当同一个element元素绑定多个事件时，只有最后一个事件会被添加，相当于**一次只能添加一个事件**；
+
+```javascript
+//IE:attachEvent;三个方法执行顺序：3-2-1；
+elment.attachEvent("onclick",handler1);
+elment.attachEvent("onclick",handler2);
+elment.attachEvent("onclick",handler3);
+```
+
+```javascript
+//标准addEventListener;执行顺序：1-2-3
+elment.addEvenListener("click",handler1,false);
+elment.addEvenListener("click",handler2,false);
+elment.addEvenListener("click",handler3,false);
+```
+
+**注意**：该方法的第三个参数是冒泡获取，是一个布尔值：当为false时表示由里向外（冒泡），true表示由外向里（捕获）。
+
+##### 三、发布/订阅（又称观察者模式）
+
+```javascript
+//jQuery的一个插件 Ben Alman的Tiny Pub/Sub
+jQuery.subscribe("done", f2);//f2向"信号中心"jQuery订阅"done"信号。
+jQuery.unsubscribe("done", f2);//取消订阅（unsubscribe）
+//或者
+function f1(){
+　　setTimeout(function () {
+　　　　// ...f1的任务代码
+　　　　jQuery.publish("done");//f1执行完成后，向"信号中心"jQuery发布"done"信号，从而引发f2的执行
+　　}, 1000);
+}
+```
+
+##### **四、promise对象（promise 模式）**
+
+**promise是一种模式，promise可以帮忙管理异步方式返回的代码。**将代码进行封装并添加一个类似于事件处理的管理层。我们可以使用promise来注册代码，这些代码会在在promise**成功或者失败后运行**。
+
+我们可以注册任意数量的函数再成功或者失败后运行，也可以在任何时候注册事件处理程序。
+
+promise有两种状态：1、等待（pending）；2、完成（settled）。promise会一直处于等待状态，直到它所包装的异步调用返回/超时/结束。这时候promise状态变成完成。完成状态分成两类：解决（resolved）；拒绝（rejected）。
+
+resolve()函数告诉promise用户promise已解决；reject()函数告诉promise用户promise未能顺利完成。注意then和catch用法，可以将他们想象成onsucess和onfailure事件的处理程序。
+
+```javascript
+f1().then(f2).then(f3);
+f1().then(f2).fail(f3);
+```
+
+**优点**：回调函数写成了**链式写法**，程序的流程可以看得很清楚，而且有一整套的配套方法，可以实现很多强大的功能。**如果一个任务已经完成，再添加回调函数，该回调函数会立即执行**。
+
+**缺点：**编写和理解都相对比较难。
+
+##### **五、**优雅的async/await
+
+**async** 函数书写的方式跟我们普通的函数书写方式一样，只不过是前面多了一个 `async` 关键字，并且函数返回的是一个 **Promise** 对象，所接收的值就是函数 **return** 的值。
+
+在 **async** 函数内部可以使用 **await** 命令，表示等待一个异步函数的返回。await 后面跟着的是一个 Promise 对象，如果不是的话，系统会调用 `Promise.resolve()` 方法，将其转为一个 resolve 的 **Promise** 的对象。
+
+```javascript
+let bar = async function(){  
+	try{    
+        await Promise.reject('error')
+    }catch(e){    
+        console.log(e)
+    }
+}
+```
+
+
+
+#### 11.JS设置CSS样式的几种方式
+
+**1. 直接设置style的属性**  某些情况用这个设置 !important值无效
+
+```css
+element.style.height = '100px';
+/*		如果属性有'-'号，就写成驼峰的形式（如textAlign）  
+如果想保留 - 号，就中括号的形式  element.style['text-align'] = '100px';*/
+```
+
+**2. 直接设置属性**（只能用于某些属性，相关样式会自动识别）
+
+```css
+element.setAttribute('height', 100);
+element.setAttribute('height', '100px');
+```
+
+**3. 设置style的属性**
+
+```css
+element.setAttribute('style', 'height: 100px !important');
+```
+
+**4. 使用setProperty**  如果要设置!important，推荐用这种方法设置第三个参数
+
+```css
+element.style.setProperty('height', '300px', 'important');
+```
+
+**5. 改变class**   比如JQ的更改class相关方法
+
+```css
+element.className = 'blue';
+element.className += 'blue fb';
+/*因JS获取不到css的伪元素，所以可以通过改变伪元素父级的class来动态更改伪元素的样式*/
+```
+
+**6. 设置cssText**
+
+```css
+element.style.cssText = 'height: 100px !important';
+element.style.cssText += 'height: 100px !important';
+```
+
+**7. 创建引入新的css样式文件**
+
+```javascript
+	function addNewStyle(newStyle) {
+            var styleElement = document.getElementById('styles_js');
+            if (!styleElement) {
+                styleElement = document.createElement('style');
+                styleElement.type = 'text/css';
+                styleElement.id = 'styles_js';
+                document.getElementsByTagName('head')[0].appendChild(styleElement);
+            }  
+            styleElement.appendChild(document.createTextNode(newStyle));
+     }
+	addNewStyle('.box {height: 100px !important;}');
+```
+
+**8. 使用addRule、insertRule**
+
+```javascript
+		// 在原有样式操作
+        document.styleSheets[0].addRule('.box', 'height: 100px');
+        document.styleSheets[0].insertRule('.box {height: 100px}', 0);
+ 
+        // 或者插入新样式时操作
+        var styleEl = document.createElement('style'),
+            styleSheet = styleEl.sheet;
+ 
+        styleSheet.addRule('.box', 'height: 100px');
+        styleSheet.insertRule('.box {height: 100px}', 0);
+ 
+        document.head.appendChild(styleEl);  
+```
+
+
+
+#### 12.点击网页任意空白区域隐藏div
+
+```javascript
+$('.phone_cell').on('click',function(event){
+    //取消事件冒泡  
+    event.stopPropagation();
+    $('.ulfix').slideToggle();
+});
+//点击空白处隐藏弹出层，下面为消失效果
+$(window).click(function(){
+    if ($('.ulfix').css('display')!='none') {
+        $('.ulfix').slideToggle();
+    }    
+});
+```
+
+需要注意的是如果单层里面本身还有点击事件，如果点击自身也会出现消失的情况 ，解决办法给点击事件增加
+
+
+
+#### 13.js的基本数据类型及其判断方法
+
+**值类型(6个基本类型)**：字符串（String）、数字(Number)、布尔(Boolean)、空（Null）、未定义（Undefined）、Symbol（ES6引入，表示独一无二的值）。
+
+**引用数据类型**（又称Object类型）：对象(Object)、数组(Array)、函数(Function)、Date 类型、RegExp 类型（正则）。
+
+##### 检测类型常用的有typeof和instanceof：
+
+①typeof：经常用来检测一个变量是不是最基本的数据类型
+
+```javascript
+var a;typeof a;    	// undefined，声明未赋值
+a = true;typeof a;    // boolean
+a = 666;typeof a;    // number 
+a = "hello";typeof a;    // string
+a = Symbol();typeof a;    // symbol
+a = [];typeof a;    // object
+a = {};typeof a;    // object
+a = /aaa/g;typeof a;    // object
+
+a = null;typeof a;    // object，注意null判断出来的类型是object
+a = function(){};typeof a;    // function，注意function判断出来的类型是function而不是object
+```
+
+②instanceof：判断一个引用类型的变量具体是不是某种类型的对象
+
+```javascript
+({}) instanceof Object              // true
+([]) instanceof Array               // true
+(/aa/g) instanceof RegExp           // true
+(function(){}) instanceof Function  // true
+```
+
+
+
+#### 14.怎么判断数组类型？5种方法
+
+typeof运算符，constructor法，instanceof运算符，Object.prototype.toString方法以及Array.isArray法
+
+**①typeof**：javascript原生提供的判断数据类型的运算符，它会返回一个表示参数的数据类型的字符串；但是数组，对象，正则，null经过这个判断得到的都是object，**并不能识别出数组**
+
+```javascript
+const s = [];
+console.log(typeof(s))//object
+```
+
+**②instanceof运算符**：判断某个构造函数的prototype属性所指向的對象是否存在于另外一个要检测对象的原型链上。如果这个Object的**原型链上能够找到Array构造函数**的话，那么这个Object应该及就是一个数组，如果这个Object的原型链上只能找到Object构造函数的话，那么它就不是一个数组。
+
+```javascript
+({}) instanceof Object              // true
+([]) instanceof Array               // true
+```
+
+**③constructor**：实例化的数组拥有一个constructor属性，这个属性指向生成这个数组的方法。但是constructor属性可以改写，**判断的结果不靠谱**。
+
+```javascript
+const a = [];console.log(a.constructor);//function Array(){ [native code] }
+console.log(a.constructor==Array);//true
+const o = {};console.log(o.constructor);//function Object(){ [native code] }
+const r = /^[0-9]$/;console.log(r.constructor);//function RegExp() { [native code] }
+const n = null;console.log(n.constructor);//报错
+```
+
+**④Object.prototype.toString**：每一个继承自Object的对象都拥有toString的方法，toString方法将会返回"[object *type*]"，其中的***type*代表的是对象的类型**，根据type的值，我们就可以判断这个疑似数组的对象到底是不是数组了。**但是对象的toString方法也可以重写，可能会判断出错**。
+
+注意：不能直接使用数组的。toString方法，会返回字符串，如下：
+
+```javascript
+const a = ['Hello','world'];a.toString();//"Hello,world"
+const b = {0:'Hello',1:'world'};b.toString();//"[object Object]"
+const c = 'Hello world';c.toString();//"Hello,world"
+```
+
+所以要判断除了对象之外的数据的数据类型，我们需要“借用”对象的toString方法，使用**call或者apply方法来改变toString方法的执行上下文**：
+
+```javascript
+const a = ['Hello','world'];Object.prototype.toString.call(a);//"[object Array]"
+						    Object.prototype.toString.apply(a);//"[object Array]"
+const c = 'Hello world';Object.prototype.toString.call(c);//"[object String]"
+						Object.prototype.toString.apply(c);//"[object String]"
+```
+
+**⑤isArray方法**：最靠谱的判断数组的方法
+
+```javascript
+const a = [];Array.isArray(a);//true
+const b = {};Array.isArray(b);//false
+```
+
+重写了Object.prototype.toString方法、修改了constructor对象是不影响判断的结果的。
