--- a/_posts/2019-09-03-旅游移动端.md
+++ b/_posts/2019-09-03-旅游移动端.md
@@ -266,5 +266,5 @@ axios.get('/api/detail.json',{params:this.$route.params.id}).then(...)
 
 异步组件是指：打包上线后，点击进入什么页面 ，再加载什么页面的js逻辑，而不是一次性加载
 
-![1567605838370](/../../img/assets_2019/1567605838370.png)
+![](/img/assets_2019/1567605838370.png)
 
