--- a/_posts/2019-07-07-es6相关 面试问题.md
+++ b/_posts/2019-07-07-es6相关 面试问题.md
@@ -15,6 +15,265 @@ typora-root-url: ..
 
 # es6相关 面试问题
 
-1.箭头函数中的**this指向定义时**当前周围的作用域；
+#### 1.箭头函数中的**this指向定义时**当前周围的作用域；
 
-2.如果使用标记模板字面量，第一个参数的值总是字符串的数组。其余的参数获取的是传递的表达式的值；
+#### 2.如果使用标记模板字面量，第一个参数的值总是字符串的数组。其余的参数获取的是传递的表达式的值；
+
+#### 3. es6中和原型一样用来继承的class和继承是怎么实现的？
+
+贴上
+
+[阮一峰大神的ES6讲解]: http://es6.ruanyifeng.com/#docs/class	"ES6"
+
+```javascript
+class Point {
+  // ...
+}
+typeof Point // "function"，类的数据类型就是函数
+Point === Point.prototype.constructor // true，类本身就指向构造函数
+```
+
+使用的时候，也是直接对类使用`new`命令，跟构造函数的用法完全一致，不使用new会报错。
+
+类的所有方法都定义在类的`prototype`属性上面。
+
+```javascript
+class Point {
+  constructor() {    // ...  }
+  toString() {    // ...  }
+  toValue() {    // ...  }
+}
+// 等同于
+Point.prototype = {
+  constructor() {},
+  toString() {},
+  toValue() {},
+};
+
+//Object.assign方法可以很方便地一次向类添加多个方法
+Object.assign(Point.prototype, {
+  toString(){},
+  toValue(){}
+});
+```
+
+**类不存在变量提升**（hoist），这一点与 ES5 完全不同。
+
+
+
+
+
+Class 可以通过`extends`关键字实现继承。
+
+```javascript
+class ColorPoint extends Point {}//ColorPoint继承了Point类所有的属性和方法
+```
+
+`super`关键字，表示父类的构造函数，用来新建父类的`this`对象。
+
+子类必须在`constructor`方法中调用`super`方法，否则新建实例时会报错，只有调用`super`之后，才可以使用`this`关键字。
+
+**区别：**
+
+ES5 的继承，实质是**先创造子类的实例对象`this`**，然后再将父类的方法**添加到`this`上面**（`Parent.apply(this)`）。
+
+ES6 的继承机制完全不同，实质是**先将父类实例对象的属性和方法，加到`this`上面**（所以必须先调用`super`方法），然后再用子类的构造函数**修改`this`。**
+
+
+
+Class 作为构造函数的语法糖，同时有`prototype`属性和`__proto__`属性，因此同时存在两条继承链。
+
+（1）子类的`_proto_`属性，表示构造函数的继承，总是指向父类。
+
+（2）子类`prototype`属性的`_proto_`属性，表示方法的继承，总是指向父类的`prototype`属性。
+
+子类实例的`__proto__`属性的`__proto__`属性，指向父类实例的`__proto__`属性。也就是说，子类的原型的原型，是父类的原型。
+
+
+
+`Object.getPrototypeOf`方法判断，一个类是否继承了另一个类。
+
+
+
+#### 4. es6中const、let、var之间的区别？
+
+1. var定义的变量，**作用域**是整个封闭函数，是全域的；
+
+   let定义的变量，作用域是在**块级或者字块**中；
+
+2. **变量提升**：不论通过var声明的变量处于当前作用于的第几行，都会提升到**作用域的最顶部**。
+
+   而let声明的变量不会在顶部初始化，凡是在let声明之前使用该变量都会报错（引用错误ReferenceError）；
+
+3. 只要块级作用域内存在`let`，它所声明的变量就会**绑定在这个区域**；
+
+4. **let不允许**在相同作用域内**重复声明**（报错同时使用var和let，两个let）
+
+   
+
+const用来专门声明一个常量，它跟let一样作用于**块级作用域**，**没有变量提升**，**重复声明会报错**，不同的是**const声明的常量不可改变，声明时必须初始化（赋值）**，const定义的对象可变。
+
+const使用场景很广，包括常量、配置项以及引用的组件、定义的 “大部分” 中间变量等，都应该以cosnt做定义。反之就 let 而言，他的使用场景应该是**相对较少**的，我们只会在 loop(for，while 循环)及少量必须重定义的变量上用到他。
+
+
+
+#### 5. 大致讲一下ES6新特性；
+
+① **箭头函数**；
+
+② 增加了对类的**支持class关键字**；继承：`class Programmer extends Animal`
+
+③ 增强了**对象字面量**：可以在对象字面量里面**定义原型**
+
+` __proto__: human, //设置此对象的原型为human,相当于继承human ` ；
+
+定义方法**可以不用function关键字**
+
+` work() {console.log('working...'); } `；
+
+④ **字符串模板**：反引号 ` 来创建字符串；
+
+⑤ **解构**：[name,age]=[Alice,'male','secrect'];//数组解构；
+
+⑥ 参数默认值，不定参数，拓展参数：
+
+​	**参数默认值**：在定义函数的时候指定参数的默认值
+
+```javascript
+function sayHello2(name='dude'){
+	console.log(`Hello ${name}`);
+}
+```
+
+​	**不定参数**：在函数中使用命名参数同时接收不定数量的未命名参数，**三个句点后跟代表所有不定参数的变量名**。
+
+```javascript
+function add(...x){
+	return x.reduce((m,n)=>m+n);
+}
+```
+
+​	**拓展参数**：允许传递数组或者类数组直接做为函数的参数而不用通过apply。
+
+```javascript
+var people=['Wayou','John','Sherlock'];
+sayHello(...people);//输出：Hello Wayou,John,Sherlock
+```
+
+⑦ `let` 与`const`关键字
+
+⑧ `for of `值遍历：for in 循环用于遍历数组，类数组或对象，for of循环功能相似，不同的是每次循环它**提供的不是序号而是值**。
+
+⑨ iterator, generator：iterator拥有一个next方法；generator是一种特殊的iterator，通过function*来声明的，**yield 关键字**可以暂停函数的执行，随后可以再进进入函数继续执行。
+
+⑩ **模块module**
+
+```javascript
+// point.js
+module "point" {
+    export class Point {
+        constructor (x, y) {
+            public x = x;
+            public y = y;
+        } 
+    }
+}
+
+// myapp.js
+module point from "/point.js";	//声明引用的模块
+import Point from "point";		//可以看出，尽管声明了引用的模块，还是可以通过指定需要的部分进行导入
+var origin = new Point(0, 0);
+console.log(origin);
+```
+
+① **Map，Set 和 WeakMap，WeakSet**：提供了更加方便的获取属性值的方法，不用像以前一样用hasOwnProperty来检查某个属性是属于原型链上还是当前对象的。同时，在进行属性值添加与获取时有专门的get，set 方法。WeakMap,WeakSet更加安全，作为属性键的对象如果没有别的变量在引用它们，则会被回收释放掉。
+
+② Proxies：**监听对象**身上发生了什么事情，并在这些事情发生后执行一些相应的操作。
+
+③ Symbols：是一种基本类型，不是一个对象。可以用symbol这种值来做为对象的键。
+
+④ Math，Number，String，Object 的新API；
+
+⑤ Promises：**处理异步操作的一种模式**，then()
+
+
+
+#### 6.Object.assign浅拷贝
+
+Object.assign方法用来将源对象（source）的所有可枚举属性，复制到目标对象（target）。
+
+Object.assign方法实行的是**浅拷贝**，而不是深拷贝。
+
+**参数**：
+
+​	它**至少需要两个对象**作为参数，第一个参数是目标对象，后面的参数都是源对象。
+
+​	如果**只有一个参数，Object.assign会直接返回**该参数。
+
+​	如果该参数**不是对象，则会先转成对象，然后返回**。
+
+​	由于**undefined和null无法转成对象**，所以如果它们作为参数，就会**报错**。
+
+注：如果目标对象与源对象有**同名属**性，或多个源对象有同名属性，则**后面的属性会覆盖前面的属性**。
+
+注意：如果非对象参数出现在源对象的位置（即**非首参数**），那么处理规则有所不同。首先，这些参数都会转成对象，如果无法转成对象，就会跳过。这意味着， **如果undefined和null不在首参数，就不会报错**。其他类型的值（即数值、字符串和布尔值）不在首参数，也不会报错。但是，除了字符串会以数组形式，拷贝入目标对象，其他值都不会产生效果。
+
+对于**嵌套的对象**，Object.assign的处理方法是替换，而不是添加。
+
+```javascript
+var target = { a: { b: 'c', d: 'e' } }
+var source = { a: { b: 'hello' } } 
+Object.assign(target, source); /*{ a: { b: 'hello' } } */
+```
+
+注意，Object.assign可以用**来处理数组，但是会把数组视为对象**。
+
+```javascript
+console.log(Object.assign([1, 2, 3], [4, 5]));
+/*[4,5,3] 4覆盖1，5覆盖2，因为它们在数组的同一位置，所以就对应位置覆盖了*/
+```
+
+如果源对象某个属性的值是对象，那么目标对象拷贝得到的是这个对象的引用。
+
+```javascript
+var object1 = { a: { b: 1 } };
+var object2 = Object.assign({}, object1); 
+object1.a.b = 2; 
+console.log(object2.a.b);
+```
+
+**用途**：
+
+为对象添加属性；为对象添加方法；克隆对象；合并多个对象；为属性指定默认值
+
+```javascript
+//克隆对象：将原始对象拷贝到一个空对象，就得到了原始对象的克隆
+function copyFnc(origin) {
+	return Object.assign({}, origin)
+} 
+var sur = { a: 1, b: 2 };
+console.log(copyFnc(sur));
+```
+
+采用这种方法克隆，只能克隆原始对象自身的值，不能克隆它继承的值。如果想要**保持继承链**，可以采用下面的代码。
+
+```javascript
+/*克隆对象：在JS里子类利用Object.getPrototypeOf去调用父类方法,用来获取对象的原型*/
+function clone(origin) {
+	let originProto = Object.getPrototypeOf(origin);
+	return Object.assign(Object.create(originProto), origin);
+}
+```
+
+```javascript
+//多个对象合并到某个对象
+const merge = (target, ...sources) => Object.assign(target, ...sources);
+//多个对象合并到新对象
+const merge = (...sources) => Object.assign({}, ...sources);
+
+const o1 = { a: 1 };
+const o2 = { b: 2 };
+const o3 = { c: 3 };
+const obj = Object.assign(o1, o2, o3);// { a: 1, b: 2, c: 3 }
+```
+
