--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -182,7 +182,7 @@ header('Access-Control-Allow-Method:POST,GET');//允许访问的方式
 
 
 
-## 5.cookie中的session了解吗？
+## 5.cookie和session了解吗？
 
 `cookie`和`sessiom`是两种**保持会话**状态的方法。
 
@@ -190,7 +190,7 @@ header('Access-Control-Allow-Method:POST,GET');//允许访问的方式
 
 ​	session和cookie的功能类似，也是一种保持会话状态的方式，在用户使用浏览器发起会话时，服务器会为每一个用户浏览器提供一个单独的session对象来保存用户的数据，并将它保存在服务端，而当用户访问其他web资源的时候，则可以从保存用户数据的session对象中把用户数据抽取出来并进行访问。
 
-区别：
+**区别**：
 
 1. cookie的用户数据是保存在**用户浏览器**的cookie中的；
 
@@ -563,154 +563,180 @@ export default {
 WebP图片格式能给前端带来优化
 WebP格式：谷歌开发一种旨在加快图片加载速度的图片格式
 
-### 12.数组常用的遍历方法有哪几种？（for...in一般用于对象）
+```
+(function(){
+	try{
+		console.log(a);
+		
+		var a="a";
+		console.log(a);
+		b();
+		c(); 
+		
+		function b(){
+			console.log("b");
+		}
+		var c=function(){
+			console.log("c");
+		}
+		console.log("d")
+        
+        }
+})
+```
 
-### 13. Canvas绘图；
 
-### 14.Webpack；
 
-### 15.Ajax遇到拦截器，请求数据要重新处理怎么做？
 
-### 16.git的使用，常用操作代码有哪些？
 
-### 17.简单说一下get和post区别？
+1.数组常用的遍历方法有哪几种？（for...in一般用于对象）
 
-### 18.SEO搜索引擎优化？
+2.Canvas绘图；
 
-9.左边固定，右边自适应
+14.Webpack；
 
+4.Ajax遇到拦截器，请求数据要重新处理怎么做？
 
+5.git的使用，常用操作代码有哪些？
 
-1. 学过哪些基础框架？
-2. vue源码了解过吗？怎么实现数据的劫持？
-4. 分别在什么时候使用created、mounted？
-6. Promise、async await 的使用？
-7. 箭头函数和一般函数有什么区别？
-8. 后端了解过什么语言？
-9. jQuery中绑定时间用的on和bind有什么区别？
-10. 前端常用的性能优化有哪些？加快页面打开的速度怎么处理？
+6.简单说一下get和post区别？
 
+7.SEO搜索引擎优化？
 
+8.左边固定，右边自适应
 
-1. vue组件中data为什么是函数？
-2. vue-cli如何使用json数据模拟？
+9.学过哪些基础框架？
 
+10.vue源码了解过吗？怎么实现数据的劫持？
 
+11.分别在什么时候使用created、mounted？
 
-2. 深拷贝和浅拷贝的区别？怎么实现深拷贝
-4. 数组的常用操作方法？其中splice 和slice有什么区别？
-5. js中怎么绑定事件？
-6. 事件委托是什么？
+12.Promise、async await 的使用？
 
+13.箭头函数和一般函数有什么区别？
 
+14.后端了解过什么语言？
 
-1. HTTP请求中，头部有一个请求，请求头：content-type，发送请求的数据类型
-2. ES6中的Promise方法，有两个参数，分别代表什么（记不清了，引到for in）
-3. for...in和for ...of 的区别：for...of循环的i代表的是value（多用于数组），for...in循环的是key（多用于对象）
-4. bootstrap用了哪些，jQuery用了哪些，css选择器有哪几种，有哪些优先级，+  > 分别表示什么，子代/后代
-5. vue中的计算属性computed、watch有什么区别，分别应用于什么场景
-6. vue的生命周期，用过的有哪些，怎么用的描述一下；一般在mounted里面用什么
-8. Photoshop的使用，学校竞赛的情况，写的项目详细描述一下，用的vue的什么版本
-9. 项目中轮播图、列表、联动、递归展示使用，后台数据怎么模拟，获取的地址是怎么写的，面试官会详细听，问到代码，甚至会给出一定的意见（v-for改为数组管理），项目的难点在哪里
-10. 项目中用到v-for，其中的key值作用，使用效率如何，没有用key会怎么样
-11. vue中父子组件传值，用vuex组件传值的时候，代码是怎么写的
-12. 学习的方法有哪些，《js高级程序设计》中函数重载了解吗
+15.jQuery中绑定时间用的on和bind有什么区别？
 
+16.前端常用的性能优化有哪些？加快页面打开的速度怎么处理？
 
+17.vue-cli如何使用json数据模拟？
 
-1. 在js的浏览器对象模型中，window对象的（）属性是用来指定浏览器状态栏里面的临时消息
+18.深拷贝和浅拷贝的区别？怎么实现深拷贝
 
-2. 两个div采用绝对定位，要设置层级关系，需要设置哪个属性
+19.数组的常用操作方法？其中splice 和slice有什么区别？
 
-3. eval()函数可以解释由js源代码组成的字符串吗？该函数能用调试工具进行断点调试吗？该函数是js自带的函数，会不会引起安全性问题？该函数动态解释字符串，会存在效率问题吗？
+20.js中怎么绑定事件？
 
-4. 一般html网页元素加载完成后，会触发哪个事件？onready onchange onload onblur
+21.事件委托是什么？
 
-5. addEventListener可以多次给DOM对象增加监听事件吗？
+22.HTTP请求中，头部有一个请求，请求头：content-type，发送请求的数据类型
 
-6. attachEvent可以删除DOM对象的监听事件吗
+23.ES6中的Promise方法，有两个参数，分别代表什么（记不清了，引到for in）
 
-   ` attachEvent`绑定的事件，如果需要注销，应该使用`detachEvent`
+24.for...in和for ...of 的区别：for...of循环的i代表的是value（多用于数组），for...in循环的是key（多用于对象）
 
-7. 通过new Date（）可以获取当前PC本地时间吗？
+25.bootstrap用了哪些，jQuery用了哪些，css选择器有哪几种，有哪些优先级，+  > 分别表示什么，子代/后代
 
-8. form标签对之间，可以出现p、ul等非表单域元素吗
+26.vue中的计算属性computed、watch有什么区别，分别应用于什么场景
 
-9. 在js中，两个证书进行除（/）运算，结果也为整数吗？
+27.vue的生命周期，用过的有哪些，怎么用的描述一下；一般在mounted里面用什么
 
-10. 属性document.body.scrolWidth表示网页中滚动条的宽度吗？
+28.Photoshop的使用，学校竞赛的情况，写的项目详细描述一下，用的vue的什么版本
 
-11. HTTP常见的状态码
+29.项目中轮播图、列表、联动、递归展示使用，后台数据怎么模拟，获取的地址是怎么写的，面试官会详细听，问到代码，甚至会给出一定的意见（v-for改为数组管理），项目的难点在哪里
 
-12. js或DOM操作方便，浏览器兼容的注意项有哪些
+30.项目中用到v-for，其中的key值作用，使用效率如何，没有用key会怎么样
 
-13. Web前端开发常见的安全漏洞
+31.vue中父子组件传值，用vuex组件传值的时候，代码是怎么写的
 
-14. 冒泡排序
+32.学习的方法有哪些，《js高级程序设计》中函数重载了解吗
 
-15. 深拷贝代码
+33.在js的浏览器对象模型中，window对象的（）属性是用来指定浏览器状态栏里面的临时消息
 
-    
+35.eval()函数可以解释由js源代码组成的字符串吗？该函数能用调试工具进行断点调试吗？该函数是js自带的函数，会不会引起安全性问题？该函数动态解释字符串，会存在效率问题吗？
 
-3. vuex了解吗
-4. 单页面应用的优缺点
-5. 轮播图的实现及后台数据抓取
-7. 安全性，在无法使用HTTPS的情况下，局域网如何实现防止报文攻击
+36.一般html网页元素加载完成后，会触发哪个事件？onready onchange onload onblur
 
+37.addEventListener可以多次给DOM对象增加监听事件吗？
 
+38.attachEvent可以删除DOM对象的监听事件吗
 
-2. 列举常用浏览器以及说明其内核
+` attachEvent`绑定的事件，如果需要注销，应该使用`detachEvent`
 
-3. http和https分别是什么，有什么区别
+40.form标签对之间，可以出现p、ul等非表单域元素吗
 
-4. cookie和session的作用与区别
+41.在js中，两个整数进行除（/）运算，结果也为整数吗？
 
-   
+42.属性document.body.scrolWidth表示网页中滚动条的宽度吗？
 
-5. 从输入URL到页面加载完成，发生了什么
+43.HTTP常见的状态码
 
-6. 可以通过什么途径查看一个网站所使用的技术
+44.js或DOM操作方便，浏览器兼容的注意项有哪些
 
-7. react的核心是什么
+45.Web前端开发常见的安全漏洞
 
-8. vue router有哪些钩子函数，介绍，哪一个是可以在全局使用的
+46.冒泡排序
 
+47.深拷贝代码
 
+49.单页面应用的优缺点
 
+50.轮播图的实现及后台数据抓取
 
-1. 为什选择`vue+element`这样一个体系搭建系统？有什么吗优点？
-2. 在实习的项目中，你学到了什么？你认为现在的项目有什么可以优化的地方？
-3. 公司要求写代码，用js原生仿照发布者订阅者模式写。
-4. 写一个左侧导航栏，不能调试，鼠标移动底部变色，参照京东左侧导航栏
+51.安全性，在无法使用HTTPS的情况下，局域网如何实现防止报文攻击
 
- 
+52.列举常用浏览器以及说明其内核
 
-1.原型链有了解么？
-3.虚拟DOM说一下？在生命周期里的对应阶段？
-4.用的前端组件是什么？
-5.画一下项目的界面结构并且简单介绍下项目
-6.问了一下通讯录界面的布局
-7.验证码有写过没
-8.npm有学过除简单命令之外的服务构建么？
-9.说一下webpack的配置问题
-10.echarts有用过么？WebGL知道么？
-11.session和cookies有用过么？简单说一下使用
-12.数据结构了解多少？数据库呢？
-13.es6怎么声明类？继承怎么写？提出是为了解决什么问题？
+53.http和https分别是什么，有什么区别
 
+55.从输入URL到页面加载完成，发生了什么
 
+56.可以通过什么途径查看一个网站所使用的技术
 
-1.为什么跨专业做前端，了解了一下课题，问了下有没有用过C++
+57.react的核心是什么
 
-3.在这半年多的学习过程中，觉得前端学习的难点在哪里：封装的太好，原生其实很难
+58.vue router有哪些钩子函数，介绍，哪一个是可以在全局使用的
 
-4.评价一下现在实习的这个项目，包括系统设计之类的：优点：功能和样式都还原了 缺点：html和样式耦合；组件化成都不高，代码难以维护
+59.为什选择`vue+element`这样一个体系搭建系统？有什么吗优点？
 
-6.怎么样去查看内存、性能：性能chrome调试的时候用network的网络选项，内存不清楚
+60.在实习的项目中，你学到了什么？你认为现在的项目有什么可以优化的地方？
 
-7.react用过吗？讲了一下react和vue之前，jQuery和bootstrap，问学过吗？
+61.公司要求写代码，用js原生仿照发布者订阅者模式写。
 
-8.数据结构、算法之类的了解吗：学习过但是使用较少，大致讲了下堆栈；讲一下数组去重的题；思想很重要
+62.写一个左侧导航栏，不能调试，鼠标移动底部变色，参照京东左侧导航栏
 
-9.PS的使用？webpack了解吗？git使用情况？
+63.原型链有了解么？
+64.虚拟DOM说一下？在生命周期里的对应阶段？
+65.用的前端组件是什么？
+66.画一下项目的界面结构并且简单介绍下项目
+67.问了一下通讯录界面的布局
+68.验证码有写过没
+69.npm有学过除简单命令之外的服务构建么？
+70.说一下webpack的配置问题
+71.echarts有用过么？WebGL知道么？
+73.数据结构了解多少？数据库呢？
+74.es6怎么声明类？继承怎么写？提出是为了解决什么问题？
+
+75.在这半年多的学习过程中，觉得前端学习的难点在哪里：封装的太好，原生其实很难
+
+76.评价一下现在实习的这个项目，包括系统设计之类的：优点：功能和样式都还原了 缺点：html和样式耦合；组件化成都不高，代码难以维护
+
+77.怎么样去查看内存、性能：性能chrome调试的时候用network的网络选项，内存不清楚
+
+78.react用过吗？讲了一下react和vue之前，jQuery和bootstrap，问学过吗？
+
+79.数据结构、算法之类的了解吗：学习过但是使用较少，大致讲了下堆栈；讲一下数组去重的题；思想很重要
+
+81.http与https
+82.画一个三角形
+83.实现0.5px横线
+84.rem 与em
+85rem相对于根节点。em相对于父元素
+86.水平垂直居中
+87.盒子模型height
+88.定时器一秒加一次
+89.滚动条
+90.Webscoket（解决痛点）
 
