--- a/_posts/2019-07-07-vue相关 面试问题.md
+++ b/_posts/2019-07-07-vue相关 面试问题.md
@@ -513,3 +513,38 @@ Vue.component('child',{
 ​	看实际情况，一般在 created（或beforeRouter） 里面就可以，如果涉及到需要页面加载完成之后的话就用 mounted。主要的区分在于**是否需要操作DOM结构**。
 ​	1.在created的时候，视图中的html并没有渲染出来，所以此时如果直接去操作html的dom节点，一定找不到相关的元素；
 ​	2.而在mounted中，由于此时html已经渲染出来了，所以可以直接操作dom节点，（此时document.getelementById 即可生效了）；
+
+
+
+#### 12.vue组件中data为什么是函数
+
+是因为js本身的特性带来的，跟vue本身设计无关。类比引用数据类型：Object是引用数据类型,如果不用function 返回,每个组件的data 都是内存的同一个地址,一个数据改变了其他也改变了;
+
+```javascript
+//如果直接赋值，两个实例同时引用一个对象，那么当你修改其中一个属性的时候，另外一个实例也会跟着改
+var MyComponent = function() {}
+MyComponent.prototype.data = {
+  a: 1,
+  b: 2,
+}
+// 上面是一个虚拟的组件构造器，真实的组件构造器方法很多
+
+var component1 = new MyComponent()
+var component2 = new MyComponent()
+// 上面实例化出来两个组件实例，也就是通过<my-component>调用，创建的两个实例
+
+component1.data.a === component2.data.a // true
+component1.data.b = 5;
+component2.data.b // 5
+```
+
+```javascript
+Vue.component('my-component', {
+  template: '<div>OK</div>',
+  data() {
+    return {} // 返回一个唯一的对象，不要和其他组件共用一个对象进行返回
+  },
+})
+```
+
+data是一个函数时，每个组件实例都有自己的作用域，每个实例相互独立,不会相互影响；
